correctly align items (search/filter) to center

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -543,7 +543,7 @@ h6 {
 }
 
 .flex-grid .col {
-    width: 20%;
+    /* width: 20%; */
     margin: 0 5vw;
   }
 
@@ -608,9 +608,7 @@ h6 {
     .flex-grid {
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        margin-left: 22vw;
-        margin-right: 22vw;
+        align-items: center;
     }
 }
 
